ff-macros/tests/object_failures/unit_struct.stderr
error: unit struct has no possible id field
 --> tests/object_failures/unit_struct.rs:4:1
  |
4 | struct Test;
  | ^^^^^^^^^^^^
