ff-macros/tests/object_failures/unit_struct.rs
use ff_macros::*;

#[derive(Object)]
struct Test;

fn main() {}